--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.20",
   "repository": {
     "type": "git",
-    "url": "https://github.com/tomkp/react-split-pane"
+    "url": "https://github.com/eifoshm/react-split-pane.git"
   },
   "license": "MIT",
   "bugs": {
